# MPI-parallelization-of-SMA

./: .gitignore  CreateModelSMA.asv  CreateModelSMA.m  Get_Functions_SMA.m  ParseSolution_SMA.m  PlotSolution_SMA.prj  SMA.asv  SMA.m  main.m  runProgram.m  runProgram.prj  runProgramNew.m  runProgramNew.prj
codegen/lib/runProgram/: .gitignore  CMakeLists.txt  CoderTimeAPI.c  Get_Functions_SMA.c  Get_Functions_SMA.h  Makefile  SMA.c  SMA.h  abs.c  atanh.c  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  diff.c  diff.h  eml_rand_mt19937ar.c  eml_rand_mt19937ar.h  eml_rand_mt19937ar_stateful.c  gcGuiReport.mat  make_exception.mat  mean.c  pause.c  plotter.py  ppval.c  ppval.h  rand.c  rand.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  runProgram.c  runProgram.h  runProgram_data.c  runProgram_data.h  (+23 more)
codegen/lib/runProgram/examples/: main.c  main.h
codegen/lib/runProgram/html/: report.mldatx
codegen/lib/runProgram/interface/: _coder_runProgram_api.c  _coder_runProgram_api.h  _coder_runProgram_info.c  _coder_runProgram_info.h  _coder_runProgram_mex.c  _coder_runProgram_mex.h
codegen/lib/runProgramNew/: .gitignore  CMakeLists.txt  CoderTimeAPI.c  CreateModelSMA.c  CreateModelSMA.h  Get_Functions_SMA.c  Get_Functions_SMA.h  SMA.c  SMA.h  abs.h  atanh.c  atanh.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  eml_rand_mt19937ar_stateful.c  linspace.c  linspace.h  mean.h  mod.c  plotter.py  ppval.c  ppval.h  rand.c  rand.h  requirements.txt  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  runProgramNew.c  runProgramNew.h  runProgramNew_data.c  runProgramNew_data.h  runProgramNew_emxutil.c  (+19 more)
codegen/lib/runProgramNew/bash scripts/: bench-cluster.sh  bench-memdomain.sh  bench-node.sh
codegen/lib/runProgramNew/examples/: main.c  main.h
codegen/lib/runProgramNew/html/: report.mldatx
codegen/lib/runProgramNew/interface/: _coder_runProgramNew_api.c  _coder_runProgramNew_api.h  _coder_runProgramNew_info.c  _coder_runProgramNew_info.h  _coder_runProgramNew_mex.c  _coder_runProgramNew_mex.h
codegen/lib/runProgramNew/scale_study/: result_bench_internode_CARD_1.csv  result_bench_internode_CARD_2.csv  result_bench_internode_CARD_3.csv  result_bench_intranode_CARD_1.csv  result_bench_intranode_CARD_2.csv  result_bench_intranode_CARD_3.csv  result_bench_memdomain_CARD_1.csv  result_bench_memdomain_CARD_2.csv  result_bench_memdomain_CARD_3.csv  scaling_script.py
codegen/mex/runProgram/: cfiGuiReport.mat  runProgram_mex.mexw64
codegen/mex/runProgram/html/: report.mldatx
codegen/mex/runProgramNew/: runProgramNew_mex.mexw64
codegen/mex/runProgramNew/html/: report.mldatx
